--- a/index.html
+++ b/index.html
@@ -204,16 +204,15 @@
                           <!-- Timeline-item -->
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
-                            <h6 class="timeline-date"><i class="fa fa-calendar"></i>Aug 2018 - Present</h6>
-                            <h4 class="timeline-title">KAYARN MECHATRONICS</h4>
-                            <h6 class="timeline-date"><i class="fa fa-calendar"></i>Kigali, Rwanda</h6>
-                            <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas explicabo alias assumenda nulla ipsam. Ducimus unde deserunt expedita quaerat, esse explicabo itaque ab, dolorem, totam quidem blanditiis. Facilis, alias repudiandae?</p>
+                            <h6 class="timeline-date"><i class="fa fa-calendar"></i>Jun 2021 - Present. Kigali, Rwanda.</h6>
+                            <h4 class="timeline-title">Ewawe form-group</h4>
+                            <p class="timeline-text">Developed and maintained parking managment solution using machine learning and django framework for admistrator dashboard</p>
                           </div>
                           <!-- End Timeline-item -->
                           <!-- Timeline-item -->
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
-                            <h6 class="timeline-date"><i class="fa fa-calendar"></i>March 2019 - Aug 2019</h6>
+                            <h6 class="timeline-date"><i class="fa fa-calendar"></i>March 2019 - Aug 2019. Kigali, Rwanda.</h6>
                             <h4 class="timeline-title">Westerwelle Startup Haus Kigali</h4>
                             <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas explicabo alias assumenda nulla ipsam. Ducimus unde deserunt expedita quaerat, esse explicabo itaque ab, dolorem, totam quidem blanditiis. Facilis, alias repudiandae?</p>
                           </div>
@@ -221,9 +220,9 @@
                           <!-- Timeline-item -->
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
-                            <h6 class="timeline-date"><i class="fa fa-calendar"></i>2017-2019</h6>
+                            <h6 class="timeline-date"><i class="fa fa-calendar"></i>Jun 2017 - Dec 2018. Kigali, Rwanda.</h6>
                             <h4 class="timeline-title">Fablab Rwanda</h4>
-                            <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas explicabo alias assumenda nulla ipsam. Ducimus unde deserunt expedita quaerat, esse explicabo itaque ab, dolorem, totam quidem blanditiis. Facilis, alias repudiandae?</p>
+                            <p class="timeline-text">intern Programmer, 3d Designing & Printing, Space Research and Deep learning</p>
                           </div>
                           <!-- End Timeline-item -->
                         </div>
