--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
                             <h6 class="timeline-date"><i class="fa fa-calendar"></i>Jun 2021 - Present. Kigali, Rwanda.</h6>
-                            <h4 class="timeline-title">Ewawe form-group</h4>
+                            <h4 class="timeline-title">Ewawe Digital Real Estate Group</h4>
                             <p class="timeline-text">Developed and maintained parking managment solution using machine learning and django framework for admistrator dashboard</p>
                           </div>
                           <!-- End Timeline-item -->
