--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   
             <div class="c-hero__left">
               <h1 class="c-hero__title">Hi there, I am Arnaud Kayonga</h1>
-              <div class="c-hero__description"><p><strong>Software Engineer</strong> and <strong>DIY Amateur</strong> from Kigali. I work as a lifestyle, product, and landscape photographer, creating images for a diverse range of requests, from online media to printed artwork.</p></div>
+              <div class="c-hero__description"><p><strong>Python Developer</strong> and <strong>DIY Amateur</strong> from Kigali, Rwanda. I mostly work around data .</p></div>
               <div class="c-hero__btn">
                 <a class="cta-button c-button c-button--primary c-button--small" href="#contact">Get in touch</a>
                 <a class="works-button c-button c-button--secondary c-button--small" href="#projects">
