--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </li>
       
       <li class="social__item">
-        <a aria-label="pinterest icon" class="social__link" href="https://pinterest.com" rel="noopener" target="_blank"><i class="ion ion-logo-pinterest"></i></a>
+        <a aria-label="linkedin icon" class="social__link" href="https://www.linkedin.com/in/arnaud-kayonga-5910a813a/" rel="noopener" target="_blank"><i class="ion ion-logo-linkedin"></i></a>
       </li>
       
       <li class="social__item">
